# alphaquantum

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
alphaquantum/: models.py  nn.py
alphaquantum/envs/: fidelity_game.py  wrappers.py
alphaquantum/qtools/: measurement.py  states.py
tests/test_qtools/: test_measurement.py  test_states.py
